2013-02-20  Yury Aliaev  <mutab0r@rambler.ru>
	* app/cheat-sheet.c, app/sample-editor.[ch], app/gui-subs.[ch]: Escape
	closes cheat-sheet and sampling windows + related code cleanups;
	* app/menubar.c, app/track-editor.[ch], soundtracker.xml:
	Right-click menu of track editor becomes working properly;
	* app/audioconfig.c, app/gui.c, app/gui-settings.c, app/gui-subs.[ch],
	app/keys.c, app/main.c, app/midi-settings-09x.c, app/sample-editor.c,
	app/tips-dialog.[ch], app/tracker-settings.c, app/transposition.c:
	Massive dialogs cleanup and optimization;
	* app/tracker.c: Fixed slightly corrupted XM displaying (with FX
	type > 35), emulating FT2 behavoiur.

2013-02-04  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.c: Bugfix (crashes, leaks and GTK warnings).

2013-02-01  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c: Bugfix (Instrument and Sample name entries' size).

2013-01-28  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c, app/gui-settings.c, app/gui-subs.[ch], app/playlist.c:
	Tooltips are hung using proper Gtk+ interface;
	* app/drivers/alsa1x-output.c: audio delay estimation is reverted back
	with appropriate tooltip. The configuting warning about ALSA 0.9 is
	removed since the playback driver is working.

2013-01-27  Yury Aliaev  <mutab0r@rambler.ru>
	Manual page is added (taken probably from Debian project).

2013-01-24  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.[ch], app/xm-player.c, app/track-editor.c, app/menubar.c,
	app/xm.h: Asterisk before file name is drawn when the module has unsaved
	changes;
	* app/gui.c, app/cheat-sheet.c, app/sample-editor.c: Application icon
	support is added;
	* app/scope-group.c: Clicking at scopes is fixed (now is working properly).

2013-01-24  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.[ch]: zooming (Ctrl) and horizontal scrolling (Shift) by
	mouse wheel; sustain and loop lines are now dislayed.

2013-01-22  Yury Aliaev  <mutab0r@rambler.ru>